# fastapi-todo

./: .gitignore  Dockerfile  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 1c9ed91dbca5_added_hashed_password_to_user_model.py  ec42dad11f9b_created_user_public.py  f62226985168_create_user_table.py
src/: config.py  db.py  main.py  models.py  routes.py  utils.py
tests/: conftest.py  test_signup.py  test_user.py
