[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.8"
dependencies = [
    "alembic>=1.14.1",
    "fastapi[standard]>=0.115.6",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.1",
    "sqlmodel>=0.0.22",
]

[dependency-groups]
dev = [
    "ruff>=0.9.2",
]
