[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.14.1",
    "bcrypt==4.0.1",
    "fastapi[standard]>=0.115.6",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.7.1",
    "pyjwt>=2.10.1",
    "sqlmodel>=0.0.22",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-env>=1.1.5",
    "ruff>=0.9.2",
]

[tool.pytest.ini_options]
env = [
    "RUN_ENV=test",
]